0.02
 - Add test for directory index.

0.01 2020-04-30T01:38:47+02:00
 - First version.