@@ -1,5 +1,6 @@
 Changes
 examples/ex1.pl
+examples/ex2.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
