@@ -16,6 +16,10 @@ METHODS
 
     Returns instance of object.
 
+    *   "indent"
+
+        Set indent of SGML output.
+
   "serve_path"
      my $psgi_ar = $obj->serve_path($env, $path_to_file_or_dir);
 
@@ -30,7 +34,7 @@ METHODS
 
     Returns Plack::Component object.
 
-EXAMPLE
+EXAMPLE1
      use strict;
      use warnings;
 
@@ -68,6 +72,59 @@ EXAMPLE
 
      # > curl http://localhost:5000/
      # <html><head><title>Title</title></head><body><div>Hello world</div></body></html>
+
+EXAMPLE2
+     use strict;
+     use warnings;
+
+     use File::Temp;
+     use IO::Barf;
+     use Plack::App::Directory::PYX;
+     use Plack::Runner;
+
+     # Temporary file with PYX.
+     my $temp_pyx_file = File::Temp->new->filename;
+
+     # PYX file.
+     my $pyx = <<'END';
+     (html
+     (head
+     (title
+     -Title
+     )title
+     )head
+     (body
+     (div
+     -Hello world
+     )div
+     )body
+     )html
+     END
+     barf($temp_pyx_file, $pyx);
+
+     # Run application with one PYX file.
+     my $app = Plack::App::Directory::PYX->new(
+             'file' => $temp_pyx_file,
+             'indent' => 1,
+     )->to_app;
+     Plack::Runner->new->run($app);
+
+     # Output:
+     # HTTP::Server::PSGI: Accepting connections at http://0:5000/
+
+     # > curl http://localhost:5000/
+     # <html>
+     #   <head>
+     #     <title>
+     #       Title
+     #     </title>
+     #   </head>
+     #   <body>
+     #     <div>
+     #       Hello world
+     #     </div>
+     #   </body>
+     # </html>
 
 DEPENDENCIES
     Plack::App::Directory, PYX::SGML::Tags, Tags::Output::Raw,
