@@ -1,4 +1,5 @@
 0.02
+ - Add indent constructor parameter and implementation.
  - Add test for directory index.
 
 0.01 2020-04-30T01:38:47+02:00
